# weave-project

./: .env.example  .gitignore  README.md  package-lock.json  package.json  project.md
agent/: package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_server.py  tsconfig.json  vitest.config.ts
agent/app/: config.py  main.py  prompts.py
agent/app/config/: __init__.py  prompts.py  tool_config.py
agent/app/routes/: chat.py  weave.py
agent/app/services/: course_service.py  enhanced_rag_service.py  hallucination_service.py  independent_course_service.py  llm_service.py  query_classifier.py  rag_service.py  retrieval_service.py  settings_service.py  storage.py  tool_calling_service.py  tool_strategy_service.py
agent/app/tool_config_pkg/: __init__.py  tool_config.py
agent/app/tools/: __init__.py  tool_definitions.py  tool_executor.py
agent/app/utils/: env.py  weave_utils.py
agent/app/weave/: init.py
agent/client/: index.html  package.json  vite.config.ts
agent/client/src/: App.tsx  index.css
agent/scripts/: prompt_manager.py  test_full_system.py  test_prompt_tracking.py
agent/tests/: conftest.py
agent/tests/functional/: test_course_search_api.py  test_rag_pipeline.py  test_streaming_response_accumulation.py  test_thinking_content_persistence.py  test_thinking_separation_integration.py
agent/tests/integration/: test_api_integration.py  test_course_search_data_structure_fix.py  test_course_search_integration.py  test_llm_integration.py  test_query_truncation_fix.py  test_session_message_persistence.py  (+3 more)
(+359 files in other folders)
